--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,3 @@
-
 <resources>
     <color name="seed">#33e500</color>
     <color name="md_theme_light_primary">#146E00</color>
@@ -61,4 +60,8 @@
     <color name="md_theme_dark_surfaceTint">#33E500</color>
     <color name="md_theme_dark_outlineVariant">#43483F</color>
     <color name="md_theme_dark_scrim">#000000</color>
+    <color name="black">#000000</color>
+    <color name="grey_text">#767676</color>
+    <color name="grey_border">#CCC3C3C3</color>
+    <color name="white">#FFFFFF</color>
 </resources>
