--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -31,19 +31,19 @@
             layout="@layout/layout_home_product"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/rv_category" />
+            app:layout_constraintTop_toBottomOf="@id/rv_category"
+            tools:layout_editor_absoluteX="0dp" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_catalog"
+            android:id="@+id/rv_product"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginVertical="8dp"
             android:orientation="vertical"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/layout_catalog"
-            app:spanCount="2"
-            tools:listitem="@layout/item_product_grid" />
+            tools:listitem="@layout/item_product_list" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
