--- a/app/src/main/res/layout/item_cart_product.xml
+++ b/app/src/main/res/layout/item_cart_product.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:padding="8dp">
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/iv_product_image"
         android:layout_width="0dp"
         android:layout_height="80dp"
@@ -14,7 +14,10 @@
         app:layout_constraintDimensionRatio="H,1:1.3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:circularflow_radiusInDP="8"
+        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"
         tools:src="@tools:sample/avatars" />
+
 
     <ImageView
         android:id="@+id/iv_remove_cart"
@@ -95,15 +98,16 @@
         style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginHorizontal="4dp"
         android:background="@drawable/bg_button_rounded_border_transparent"
         android:hint="@string/text_hint_notes"
         android:imeOptions="actionDone"
         android:inputType="text"
-        android:maxLines="3"
+        android:maxLines="2"
         android:padding="8dp"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/iv_product_image"
+        app:layout_constraintStart_toStartOf="@id/iv_product_image"
         app:layout_constraintTop_toBottomOf="@id/iv_product_image" />
 </androidx.constraintlayout.widget.ConstraintLayout>
